# formats

./: CMakeLists.txt  _clang-format  readme.md
cmake/: Findformats.cmake  auto_source_group.cmake  compile_option.cmake
formats/: formats.h
formats/common/: adl_serialize_def.hpp  cctypes.hpp  exception.hpp  marco.hpp  number.cpp  number.hpp  reference.hpp  tokens.h  type_traits.hpp
formats/common/iterator/: iterator.hpp  iterator_adapter.hpp
formats/common/reflection/: reflection.hpp  static_reflection.hpp
formats/common/unicode/: unicode.hpp
formats/common/value/: array.hpp  ordered_map.hpp
formats/jsoncpp/: conversion.hpp  error.hpp  flags.h  fwd.hpp  json.h  parse.cpp  parse.hpp  stringify.cpp  stringify.hpp  value.cpp  value.hpp
formats/jsoncpp/detail/: detector.hpp  parser.cpp  parser.hpp  stringifier.hpp  stringifier_adapter.hpp
tests/: CMakeLists.txt  custom_type.cpp  custom_type.hpp  json_test.cc  json_test.h  unit-access-element.cpp  unit-access-scaler.cpp  unit-assign.cpp  unit-constructor-container.cpp  unit-constructor-custom.cpp  unit-constructor-scaler.cpp  unit-exception.cpp  unit-if-type.cpp  unit-iterator.cpp  unit-modifier.cpp  unit-parse.cpp  unit-serializer.cpp
